# Solar-Panel-Calculation

./: LICENSE  README.md  main.py  pyproject.toml
.devcontainer/: Dockerfile
